--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,62 @@
-HELP.md
-.gradle
+# Logs
+*.log
+*.out
+*.err
+
+# Build directories
+target/
 build/
-!gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
 bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
 
-### IntelliJ IDEA ###
-.idea
-*.iws
+# Gradle files
+.gradle/
+!gradle/wrapper/gradle-wrapper.jar
+
+# Maven files
+.mvn/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+
+# IDE files
+.idea/
 *.iml
 *.ipr
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
+*.iws
+.vscode/
+*.sublime-workspace
+*.sublime-project
 
-### NetBeans ###
+# Eclipse/STS
+.classpath
+.project
+.settings/
+.springBeans
+
+# NetBeans
 /nbproject/private/
 /nbbuild/
 /dist/
 /nbdist/
 /.nb-gradle/
 
-### VS Code ###
-.vscode/
+# Intellij
+out/
+.sts4-cache/
+
+# Temporary files
+*.tmp
+*.swp
+*.swo
+*~
+
+# Operating system files
+.DS_Store
+Thumbs.db
+
+# Secret files
+.env
+*.key
+*.pem
